@@ -2,6 +2,7 @@ Revision history for Locale-CA
 
 0.09
 	Added fuzz testing
+	Use I18N::LangTags::Detect
 
 0.08	Thu Jan 16 21:05:26 EST 2025
 	Ensure AB becomes ALBERTA not ABLT.
